--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -6,10 +6,15 @@ pipeline {
     }
   }
   stages {
+    stage('Cleanup Workspace') {
+      steps {
+        deleteDir()
+      }
+    }
     stage('Checkout') {
       steps {
         sh 'echo passed'
-        //git branch: 'main', "url: https://github.com/jeetkansagra/jenkins-pipeline.git"
+        git branch: 'main', "url: https://github.com/jeetkansagra/jenkins-pipeline.git"
       }
     }
     stage('Build and Test') {
