--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -11,6 +11,11 @@ pipeline {
         deleteDir()
       }
     }
+    stage('Checkout') {
+      steps {
+        git branch: 'main', url: 'https://github.com/jeetkansagra/jenkins-pipeline.git'
+      }
+    }
     stage('Build and Test') {
       steps {
         sh 'ls -ltr'
