--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -2,7 +2,7 @@ pipeline {
   agent {
     docker {
       image 'abhishekf5/maven-abhishek-docker-agent:v1'
-      args "-u $(id -u):$(id -g) -v /var/run/docker.sock:/var/run/docker.sock"
+      args '-u root:root -v /var/run/docker.sock:/var/run/docker.sock'
  // mount Docker socket to access the host's Docker daemon
     }
   }
