--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -2,22 +2,14 @@ pipeline {
   agent {
     docker {
       image 'abhishekf5/maven-abhishek-docker-agent:v1'
-      args '-v /var/run/docker.sock:/var/run/docker.sock'
- // mount Docker socket to access the host's Docker daemon
+      args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
     }
-  }
-  options {
-    skipDefaultCheckout(true)
   }
   stages {
-    stage('Cleanup Workspace') {
-      steps {
-        deleteDir()
-      }
-    }
     stage('Checkout') {
       steps {
-        git branch: 'main', url: 'https://github.com/jeetkansagra/jenkins-pipeline.git'
+        sh 'echo passed'
+        git branch: 'main', "url: https://github.com/jeetkansagra/jenkins-pipeline.git"
       }
     }
     stage('Build and Test') {
