--- a/spring-boot-app/JenkinsFile
+++ b/spring-boot-app/JenkinsFile
@@ -5,7 +5,17 @@ pipeline {
       args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
     }
   }
+  options {
+    skipDefaultCheckout(true)
+  }
   stages {
+    
+    stage('Checkout') {
+      steps {
+        checkout scm
+        sh 'echo passed'
+  }
+    }
     stage('Build and Test') {
       steps {
         sh 'ls -ltr'
